<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.main.ui.signup.ConfirmationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="24dp"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/confirmation"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="18dp"
            android:gravity="center"
            android:text="@string/please_enter_the_code_that_we_have_sent_to_your_phone_number"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/frame_layout_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="6dp">

            <EditText
                android:id="@+id/et_1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/rounded_text_input"
                android:cursorVisible="true"
                android:elevation="6dp"
                android:gravity="center"
                android:hint="@string/_0"
                android:imeOptions="actionNone"
                android:inputType="numberDecimal"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="4dp"
                android:autofillHints="0"
                android:background="@drawable/rounded_text_input"
                android:cursorVisible="true"
                android:elevation="6dp"
                android:gravity="center"
                android:hint="@string/_0"
                android:imeOptions="actionNone"
                android:inputType="numberDecimal"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="4dp"
                android:autofillHints="0"
                android:background="@drawable/rounded_text_input"
                android:cursorVisible="true"
                android:elevation="6dp"
                android:gravity="center"
                android:hint="@string/_0"
                android:imeOptions="actionNone"
                android:inputType="numberDecimal"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="4dp"
                android:autofillHints="0"
                android:background="@drawable/rounded_text_input"
                android:cursorVisible="true"
                android:elevation="6dp"
                android:gravity="center"
                android:hint="@string/_0"
                android:imeOptions="actionNone"
                android:inputType="numberDecimal"
                android:maxLength="1"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/havn_t_received_the_code_yet"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/send_it_again"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_code"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="38dp"
            android:layout_marginTop="40dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>


</FrameLayout>